预测BTK以及添加获取faste序列的方式。

--- a/my.config
+++ b/my.config
@@ -1,7 +1,7 @@
 [client]
-database = 	ponsol2
-user = 	ponsol2
-password = GBwHfcnAc3kbY2HB
+database = ponso2_dev
+user = 	ponso2_dev
+password = MFw3WWJmJTNbcz6A
 default-character-set = utf8
-host = 192.168.1.111
+host = 39.98.131.94
 port = 3306
