--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,4 +2,9 @@
 http=:80
 chdir=/root/box/Ponsol_Web/
 module=PonSol2_Web.wsgi
-static-map=/static=/srv/django/static
+static-map=/static=/srv/django/ponsol2/static
+vacuum=True
+master=True
+pidfile=/tmp/project-master.pid
+processes = 4
+threads = 10
