修改了输入的格式并对相关介绍进行了修改，以及做了一些其他优化（发邮件等）。

--- a/db.config
+++ b/db.config
@@ -1,7 +1,7 @@
 [client]
-database = ponso2_dev
-user = 	ponso2_dev
-password = MFw3WWJmJTNbcz6A
+database = ponsol2
+user = 	ponsol2
+password = nij5G48hWn4rfKsd
 default-character-set = utf8
-host = 39.98.131.94
+host = 127.0.0.1
 port = 3306
