用户功能（注册、登录、修改密码、修改信息）基本完成，也对其他界面进行了一些修改。

--- a/db_dev.config
+++ b/db_dev.config
@@ -1,7 +1,7 @@
 [client]
-database = ponso2_dev
-user = 	ponso2_dev
-password = MFw3WWJmJTNbcz6A
+database = ponsol2-dev-g
+user = 	ponsol2-dev-g
+password = mymn7TMWSJrynrPy
 default-character-set = utf8
-host = 39.98.131.94
+host = 139.196.42.166
 port = 3306
