--- a/db_dev.config
+++ b/db_dev.config
@@ -1,7 +1,7 @@
 [client]
-database = ponso2_dev
-user = 	ponso2_dev
-password = MFw3WWJmJTNbcz6A
+database = ponsol_dev
+user = 	ponsol_dev
+password = 7pZfCTbwbrfsmYKR
 default-character-set = utf8
-host = 39.98.131.94
+host = 139.196.42.166
 port = 3306
