--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 http=:80
-chdir=/root/box/Ponsol_Web/
+chdir= /root/PonSol2_Web
 module=PonSol2_Web.wsgi
 static-map=/static=/srv/django/ponsol2/static
 vacuum=True
